# diene

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  PUBLISHING.md  README.md  clippy.toml  deny.toml  justfile  lefthook.yml  nextest.toml  package-lock.json  package.json  rust-toolchain.toml  rustc-ice-2026-07-11T07_28_57-1890806.txt  rustc-ice-2026-07-11T07_36_12-2010631.txt  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
cache/: triangle.pcache
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs  logging.rs  timer.rs
crates/diene/: Cargo.toml  README.md
crates/diene/src/: lib.rs
crates/engine-core/: Cargo.toml  README.md
crates/engine-core/src/: app.rs  lib.rs
crates/engine-core/src/app/: windowing.rs
crates/engine-renderer-api/: Cargo.toml  README.md
crates/engine-renderer-api/src/: asset.rs  lib.rs  scene.rs  texture.rs
crates/engine-renderer-vulkan/: Cargo.toml  README.md
crates/engine-renderer-vulkan/src/: lib.rs  renderer.rs
crates/engine-renderer-vulkan/src/renderer/: backend.rs
crates/engine-renderer-vulkan/src/renderer/backend/: allocator.rs  buffer.rs  call_error.rs  command.rs  depth.rs  device.rs  draw.rs  frame.rs  image.rs  instance.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  scene.rs  shader.rs  surface.rs  swapchain.rs  texture.rs  transform.rs  vertex.rs
crates/engine-renderer-vulkan/src/renderer/backend/device/: features.rs  logical.rs  mod.rs  queues.rs  selection.rs
crates/engine-runtime/: Cargo.toml  README.md
crates/engine-runtime/src/: lib.rs
crates/engine-shader/: Cargo.toml  README.md
crates/engine-shader/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  main.rs
shaders/: main.slang  main.slang.asm
