[package]
name = "diene-common"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = "Shared support utilities for the Diene game engine."
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/diene-common"
categories = { workspace = true }
keywords = { workspace = true }
readme = "README.md"
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
