[package]
name = "diene"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
engine-core = { workspace = true }
engine-renderer-api = { workspace = true }
engine-runtime = { workspace = true }
