[package]
name = "engine-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
engine-renderer-vulkan = { workspace = true }
common = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
smallvec = { workspace = true }
parking_lot = { workspace = true }
