[package]
name = "engine-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
common = { workspace = true }
engine-renderer-api = { workspace = true }

thiserror = { workspace = true }
winit = { workspace = true }
