[package]
name = "diene-engine-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = "Application lifecycle and window orchestration for Diene."
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/diene-engine-core"
categories = { workspace = true }
keywords = { workspace = true }
readme = "README.md"
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
common = { workspace = true }
engine-renderer-api = { workspace = true }

error-stack = { workspace = true }
thiserror = { workspace = true }
winit = { workspace = true }
