[package]
name = "diene-engine-renderer-api"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = "Renderer abstraction traits and window-handle types for Diene."
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/diene-engine-renderer-api"
categories = { workspace = true }
keywords = { workspace = true }
readme = "README.md"
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
error-stack = { workspace = true }
raw-window-handle = { workspace = true }
