[package]
name = "engine-renderer-vulkan"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
engine-renderer-api = { workspace = true }
common = { workspace = true }

thiserror = { workspace = true }

ash = "0.38.0"

