[package]
name = "diene-engine-renderer-vulkan"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = "Vulkan renderer backend for Diene."
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/diene-engine-renderer-vulkan"
categories = { workspace = true }
keywords = { workspace = true }
readme = "README.md"
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
engine-renderer-api = { workspace = true }
common = { workspace = true }

thiserror = { workspace = true }
error-stack = { workspace = true }
ash = { workspace = true }
ash-window = { workspace = true }
vk-mem = { workspace = true }
raw-window-handle = { workspace = true }
