[package]
name = "engine-runtime"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
common = { workspace = true }
engine-core = { workspace = true }
engine-renderer-api = { workspace = true }
engine-renderer-vulkan = { workspace = true }

thiserror = { workspace = true }
