[package]
name = "diene-engine-shader"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = "Backend-agnostic shader compilation for Diene."
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/diene-engine-shader"
categories = { workspace = true }
keywords = { workspace = true }
readme = "README.md"
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
shader-slang = { workspace = true }
thiserror = { workspace = true }
