[package]
name = "sandbox"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
engine-core = { workspace = true }
engine-renderer-vulkan = { workspace = true }
common = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
