[package]
name = "sandbox"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = "Private development sandbox for Diene."
repository = { workspace = true }
homepage = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
engine-renderer-api = { workspace = true }
engine-runtime = { workspace = true }
common = { workspace = true }

anyhow = { workspace = true }
